overflowX fixed

--- a/sass/general/_header.sass
+++ b/sass/general/_header.sass
@@ -80,6 +80,8 @@
             font-weight: 700
             font-size: 2rem
             color: $pri
+            &::after
+                background: $pri
 
 nav.nav_show
     height: 70vh
