--- a/sass/general/_reset.sass
+++ b/sass/general/_reset.sass
@@ -8,6 +8,7 @@ html
     scroll-behavior: smooth
 
 body
+    overflow-x: hidden
     font-family: 'Poppins', Arial, sans-serif
     background: white
 
