--- a/sass/general/_utility.sass
+++ b/sass/general/_utility.sass
@@ -36,6 +36,7 @@ h1.heading
 
 section
     padding: 5em 0 7em
+    width: 100%
 
 h2.section_heading
     font-size: 2.4rem
