--- a/sass/home.css
+++ b/sass/home.css
@@ -16,6 +16,7 @@ html {
 }
 
 body {
+  overflow-x: hidden;
   font-family: 'Poppins', Arial, sans-serif;
   background: white;
 }
@@ -85,6 +86,7 @@ h1.heading {
 
 section {
   padding: 5em 0 7em;
+  width: 100%;
 }
 
 h2.section_heading {
@@ -253,6 +255,9 @@ p.section_desc {
     font-size: 2rem;
     color: #363a70;
   }
+  .header_nav a::after {
+    background: #363a70;
+  }
 }
 
 nav.nav_show {
@@ -361,6 +366,11 @@ header.header_scroll {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+    padding: 0 2em;
+  }
+  .land_inner .land_desc {
+    width: 80%;
+    max-width: 50ch;
   }
   .land_inner .land_button {
     margin: 0 auto;
