--- a/sass/home/_landing.sass
+++ b/sass/home/_landing.sass
@@ -54,6 +54,10 @@
             flex: 60
             justify-content: flex-start
             align-items: center
+            padding: 0 2em
+        .land_desc
+            width: 80%
+            max-width: 50ch
         .land_button
             margin: 0 auto
 
